# app.js
@@ -3,6 +3,7 @@ const swaggerUi = require("swagger-ui-express");
 const swaggerFile = require("./swagger.json");
 
 const placesRoutes = require("./routes/places-routes");
+const usersRoutes = require("./routes/users-routes");
 const HttpError = require("./models/http-error");
 
 const app = express();
@@ -10,6 +11,8 @@ const app = express();
 app.use(express.json());
 
 app.use("/api/places", placesRoutes);
+
+app.use("/api/users", usersRoutes);
 
 app.use("/", swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
@@ -26,6 +29,5 @@ app.use((error, req, res, next) => {
   res.status(error.code || 500);
   res.json({ message: error.message || "An unknown error occurred!" });
 });
-
 
 app.listen(5000);
