# controllers/users-controllers.js
@@ -1,0 +1,67 @@
+const { v4: uuidv4 } = require("uuid");
+const { v4 } = require("uuid");
+
+const HttpError = require("../models/http-error");
+
+const DUMMY_USERS = [
+  {
+    id: "u1",
+    name: "Test User",
+    email: "test@gmail.com",
+    password: "test12pass",
+  },
+];
+
+const getAllUsers = (req, res, next) => {
+  // #swagger.path = '/api/users/{pid}'
+  // #swagger.tags= ['Users']
+  // #swagger.description = 'Find all users'
+  res.status(200).json({ users: DUMMY_USERS });
+};
+
+const signup = (req, res, next) => {
+  // #swagger.path = '/api/users/'
+  // #swagger.tags= ['Users']
+  // #swagger.description = 'Create a new user using name, email and password'
+  const { name, email, password } = req.body;
+
+  const hasUser = DUMMY_USERS.find((u) => u.email === email);
+
+  if (hasUser) {
+    throw new HttpError("Could not create user, email already exists.", 422);
+  }
+
+  const createdUser = {
+    id: v4(),
+    name,
+    email,
+    password,
+  };
+
+  DUMMY_USERS.push(createdUser);
+
+  res.status(201).json({ user: createdUser });
+};
+
+const login = (req, res, next) => {
+  // #swagger.path = '/api/users/'
+  // #swagger.tags= ['Users']
+  // #swagger.description = 'Log in a user'
+  const { email, password } = req.body;
+
+  const identifiedUser = DUMMY_USERS.find((u) => u.email === email);
+
+  if (!identifiedUser || identifiedUser.password !== password) {
+    throw new HttpError(
+      "Could not identify user, credentials seem to be wrong!",
+      401
+    );
+  }
+  res.json({ message: "Logged in!" });
+};
+
+module.exports = {
+  getAllUsers,
+  signup,
+  login,
+};
