# routes/users-routes.js
@@ -1,0 +1,13 @@
+const express = require("express");
+
+const usersControllers = require("../controllers/users-controllers");
+
+const router = express.Router();
+
+router.get("/", usersControllers.getAllUsers);
+
+router.post("/signup", usersControllers.signup);
+
+router.post("/login", usersControllers.login);
+
+module.exports = router;
